--- a/.env
+++ b/.env
@@ -2,3 +2,9 @@ REACT_APP_API_URL=https://api.giphy.com/v1/gifs
 REACT_APP_TRENDING=/trending
 REACT_APP_SEARCH=/search
 REACT_APP_API_KEY=B7OsVlPj6yK5JsFFUqGYQK1zi219S4Hy
+REACT_APP_FIREBASE_API_KEY=AIzaSyAd028lz7Vbj2dHsQoYN2jImxLzqZoywf4
+REACT_APP_FIREBASE_AUTH_DOMAIN=react-giphy-giphs.firebaseapp.com
+REACT_APP_FIREBASE_DATABASE_URL=https://react-giphy-giphs.firebaseio.com
+REACT_APP_FIREBASE_PROJECT_ID=react-giphy-giphs
+REACT_APP_FIREBASE_STORAGE_BUCKET=react-giphy-giphs.appspot.com
+REACT_APP_FIREBASE_MESSAGING_SENDER_ID=684365299986
