--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "axios": "^0.18.0",
     "bootstrap": "^4.3.1",
+    "firebase": "^5.9.4",
     "font-awesome": "^4.7.0",
     "i": "^0.3.6",
     "jquery": "^3.3.1",
